Edición de pagina index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ejercicios del modulo 8</title>
+</head>
+<body>
+    <h1 style="color: red;">este es un ejemplo de titulo 1 con estilo</h1>
+    <p style="color: brown;">este es un ejemplo de parrafo con estilo</p>
+</body>
+</html>
