--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios del modulo 8</title>
+    <style>
+        #padre{
+        border: 1px solid red;
+        width: 300px;
+        height: 300px;
+        }
+        #hijo{
+        border: 1px solid blue;
+        width: 100px;
+        height: 100px;
+        }
+    </style>
 </head>
 <body>
     <h1 style="color: red;">este es un ejemplo de titulo 1 con estilo</h1>
     <p style="color: brown;">este es un ejemplo de parrafo con estilo</p>
+    <div id="padre">
+        <div id="hijo">
+
+        </div>
+
+    </div>
 </body>
 </html>
