Se agrega palabra hijo y margin al hijo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         border: 1px solid blue;
         width: 100px;
         height: 100px;
+        margin: 20px;
         }
     </style>
 </head>
@@ -22,7 +23,7 @@
     <p style="color: brown;">este es un ejemplo de parrafo con estilo</p>
     <div id="padre">
         <div id="hijo">
-
+            HIJO
         </div>
 
     </div>
