--- a/index.html
+++ b/index.html
@@ -4,26 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ejercicios del modulo 8</title>
-    <style>
-        #padre{
-        border: 1px solid red;
-        width: 300px;
-        height: 300px;
-        }
-        #hijo{
-        border: 1px solid blue;
-        width: 100px;
-        height: 100px;
-        margin: 20px;
-        padding: 50px;
-        }
-    </style>
+    <link rel="stylesheet" href="Style.css">
 </head>
 <body>
-    <h1 style="color: red;">este es un ejemplo de titulo 1 con estilo</h1>
-    <p style="color: brown;">este es un ejemplo de parrafo con estilo</p>
-    <div id="padre">
-        <div id="hijo">
+    <h1>este es un ejemplo de titulo 1 con estilo</h1>
+    <p>este es un ejemplo de parrafo con estilo</p>
+    <div class="bordes-todos" id="padre">
+        <div class="bordes-todos" id="hijo">
             HIJO
         </div>
 
